examples/tests/valid/vars.w
var j = 5;
j = j + 1;

let handler = inflight(x: str): str => {
    var x = 5;
    x = x + 1;
};
